website: update references part of FAQ

--- a/index.html
+++ b/index.html
@@ -486,23 +486,22 @@
                 <dt id="faq_cite">What papers should I cite / where can I find out more about NOAH experiments?</dt>
                 <span class="small"><a href="#top">Back to top of page</a> | <a href="#faq_h2">Back to FAQ</a></span>
                 <dd>
-                    <p>Thanks for asking. There are a few:</p>
-                    
-                    <ol id="citations">
+                    <p>Thanks for asking. Firstly, note that the pulse programmes provided above will already suggest references that are relevant. If you're interested in reading more, the original NOAH paper is:</p>
+                    <ul>
                         <li>Kupče, Ē.; Claridge, T. D. W. NOAH: NMR Supersequences for Small Molecule Analysis and Structure Elucidation. <i>Angew. Chem. Int. Ed.</i> <b>2017,</b> <i>56</i> (39), 11779–11783. <a href="https://doi.org/10.1002/anie.201705506">DOI: 10.1002/anie.201705506</a>.</li>
+                    </ul>
+
+                    <p>and there are a couple of reviews which cover the NOAH technique:</p>
+                    <ul>
+                        <li>Kupče, Ē.; Frydman, L.; Webb, A.; Yong, J. R. J.; Claridge, T. D. W.<i> Nat. Rev. Methods Primers</i> <b>2021,</b> in press.</li>
+                        <li>Kupče, Ē.; Mote, K. R.; Webb, A. G.; Madhu, P. K.; Claridge, T. D. W.<i> Prog. Nucl. Magn. Reson. Spectrosc.</i> <b>2021.</b> <a href="https://doi.org/10.1016/j.pnmrs.2021.03.001">DOI: 10.1016/j.pnmrs.2021.03.001</a>.</li>
+                    </ul>
+
+                    <p>Apart from these, there are a few other papers covering more technical details of individual modules and supersequences:
+                    <ul>
                         <li>Kupče, Ē.; Claridge, T. D. W. Molecular structure from a single NMR supersequence. <i>Chem. Commun.</i> <b>2018,</b> <i>54</i> (52), 7139–7142. <a href="https://doi.org/10.1039/C8CC03296C">DOI: 10.1039/C8CC03296C</a>.</li>
                         <li>Claridge, T. D. W.; Mayzel, M.; Kupče, Ē. Triplet NOAH supersequences optimised for small molecule structure characterisation. <i>Magn. Reson. Chem.</i> <b>2019,</b> <i>57</i> (11), 946–952. <a href="https://doi.org/10.1002/mrc.4887">DOI: 10.1002/mrc.4887</a>.</li>
                         <li>Kupče, Ē.; Claridge, T. D. W. New NOAH modules for structure elucidation at natural isotopic abundance. <i>J. Magn. Reson.</i> <b>2019,</b> <i>307,</i> 106568. <a href="https://doi.org/10.1016/j.jmr.2019.106568">DOI: 10.1016/j.jmr.2019.106568</a>.</li>
-                    </ol>
-
-                    <p>In terms of citations, it would be nice to cite at least [1], which is the main article. If you're using some HMBC + HSQC + COSY combination for characterisation of organic molecules, then [3] will also be relevant. The other papers are slightly more niche, and if you should be citing those you probably already know it!</p>
-
-                    <p>By the way, for some of the more recent modules that were implemented directly as-is, you might feel that you also want to cite the source of the module. The relevant ones are:</p>
-                    <ul>
-                        <li>[CLIP-COSY] Koos, M. R. M.; Kummerlöwe, G.; Kaltschnee, L.; Thiele, C. M.; Luy, B. CLIP-COSY: A Clean In-Phase Experiment for the Rapid Acquisition of COSY-type Correlations. <i>Angew. Chem. Int. Ed.</i> <b>2016,</b> <i>55</i> (27), 7655–7659. <a href="https://doi.org/10.1002/anie.201510938">DOI: 10.1002/anie.201510938</a>.</li>
-                        <li>[Adiabatic ROESY] Thiele, C. M.; Petzold, K.; Schleucher, J. EASY ROESY: Reliable Cross-Peak Integration in Adiabatic Symmetrized ROESY. <i>Chem. Eur. J.</i> <b>2009,</b> <i>15</i> (3), 585–588. <a href="https://doi.org/10.1002/chem.200802027">DOI: 10.1002/chem.200802027</a></li>
-                        <li>[1D PSYCHE] Foroozandeh, M.; Adams, R. W.; Meharry, N. J.; Jeannerat, D.; Nilsson, M.; Morris, G. A. Ultrahigh-Resolution NMR Spectroscopy. <i>Angew. Chem. Int. Ed.</i> <b>2014,</b> <i>53</i> (27), 6990–6992. <a href="https://doi.org/10.1002/anie.201404111">DOI: 10.1002/anie.201404111</a>.</li>
-                        <li>[1D TSE-PSYCHE and PSYCHE 2DJ] Foroozandeh, M.; Adams, R. W.; Kiraly, P.; Nilsson, M.; Morris, G. A. Measuring couplings in crowded NMR spectra: pure shift NMR with multiplet analysis. <i>Chem. Commun.</i> <b>2015,</b> <i>51</i> (84), 15410–15413. <a href="https://doi.org/10.1039/C5CC06293D">DOI: 10.1039/C5CC06293D</a>.</li>
                     </ul>
                 </dd>
                 
