website: update FAQ to include Big Sur

--- a/index.html
+++ b/index.html
@@ -447,10 +447,11 @@
                     <p>If you are using old versions of the pulse programme, there is an additional step where you need to specify the userP1 through userP5 parameters. For example, in a BSC experiment, you would specify (userP1, userP2, userP3) = (noah_hmbc, noah_hsqc, noah_cosy) respectively. This is no longer necessary as long as you have downloaded the newest AU scripts and pulse programmes from this website. Please do get in touch if you need extra information on this.</p>
                 </dd>
 
-                <dt id="faq_catalina">I'm using macOS Catalina and the processing doesn't work.</dt>
+                <dt id="faq_catalina">I'm using macOS Catalina / Big Sur and the processing doesn't work.</dt>
                 <span class="small"><a href="#top">Back to top of page</a> | <a href="#faq_h2">Back to FAQ</a></span>
                 <dd>
-                    <p>Please update TopSpin to version 4.1.0 (or later). On older versions of TopSpin for macOS, there is a bug in TopSpin which causes certain parts of AU programmes to not work on Catalina.</p>
+                    <p><b>On Catalina:</b> Please update TopSpin to version 4.1.0 or later. On older versions of TopSpin for macOS, there is a bug in TopSpin which causes certain parts of AU programmes to not work on Catalina.</p>
+                    <p><b>On Big Sur:</b> The AU programmes are completely broken even on TopSpin 4.1.1. Sorry about that; we'll have to wait until Bruker provides a fix.</p>
                 </dd>
 
                 <dt id="faq_nus">Can non-uniform sampling be used with NOAH sequences?</dt>
