--- a/index.html
+++ b/index.html
@@ -492,22 +492,22 @@
                 <span class="small"><a href="#top">Back to top of page</a> | <a href="#faq_h2">Back to FAQ</a></span>
                 <dd>
                     <p>Thanks for asking. Firstly, note that the pulse programmes provided above will already suggest references that are relevant. If you're interested in reading more, the original NOAH paper is:</p>
-                    <ul>
+                    <ol class="citation-start">
                         <li>Kupče, Ē.; Claridge, T. D. W. NOAH: NMR Supersequences for Small Molecule Analysis and Structure Elucidation. <i>Angew. Chem. Int. Ed.</i> <b>2017,</b> <i>56</i> (39), 11779–11783. <a href="https://doi.org/10.1002/anie.201705506">DOI: 10.1002/anie.201705506</a>.</li>
-                    </ul>
+                    </ol>
 
                     <p>and there are a couple of reviews which cover the NOAH technique:</p>
-                    <ul>
+                    <ol class="citation">
                         <li>Kupče, Ē.; Frydman, L.; Webb, A.; Yong, J. R. J.; Claridge, T. D. W.<i> Nat. Rev. Methods Primers</i> <b>2021,</b> in press.</li>
                         <li>Kupče, Ē.; Mote, K. R.; Webb, A. G.; Madhu, P. K.; Claridge, T. D. W.<i> Prog. Nucl. Magn. Reson. Spectrosc.</i> <b>2021.</b> <a href="https://doi.org/10.1016/j.pnmrs.2021.03.001">DOI: 10.1016/j.pnmrs.2021.03.001</a>.</li>
-                    </ul>
+                    </ol>
 
                     <p>Apart from these, there are a few other papers covering more technical details of individual modules and supersequences:
-                    <ul>
+                    <ol class="citation">
                         <li>Kupče, Ē.; Claridge, T. D. W. Molecular structure from a single NMR supersequence. <i>Chem. Commun.</i> <b>2018,</b> <i>54</i> (52), 7139–7142. <a href="https://doi.org/10.1039/C8CC03296C">DOI: 10.1039/C8CC03296C</a>.</li>
                         <li>Claridge, T. D. W.; Mayzel, M.; Kupče, Ē. Triplet NOAH supersequences optimised for small molecule structure characterisation. <i>Magn. Reson. Chem.</i> <b>2019,</b> <i>57</i> (11), 946–952. <a href="https://doi.org/10.1002/mrc.4887">DOI: 10.1002/mrc.4887</a>.</li>
                         <li>Kupče, Ē.; Claridge, T. D. W. New NOAH modules for structure elucidation at natural isotopic abundance. <i>J. Magn. Reson.</i> <b>2019,</b> <i>307,</i> 106568. <a href="https://doi.org/10.1016/j.jmr.2019.106568">DOI: 10.1016/j.jmr.2019.106568</a>.</li>
-                    </ul>
+                    </ol>
                 </dd>
                 
             </dl>
