website: update references to reviews

--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@
 
                     <p>and there are a couple of reviews which cover the NOAH technique:</p>
                     <ol class="citation">
-                        <li>Kupče, Ē.; Frydman, L.; Webb, A.; Yong, J. R. J.; Claridge, T. D. W.<i> Nat. Rev. Methods Primers</i> <b>2021,</b> in press.</li>
-                        <li>Kupče, Ē.; Mote, K. R.; Webb, A. G.; Madhu, P. K.; Claridge, T. D. W.<i> Prog. Nucl. Magn. Reson. Spectrosc.</i> <b>2021.</b> <a href="https://doi.org/10.1016/j.pnmrs.2021.03.001">DOI: 10.1016/j.pnmrs.2021.03.001</a>.</li>
+                        <li>Kupče, Ē.; Frydman, L.; Webb, A.; Yong, J. R. J.; Claridge, T. D. W.<i> Nat. Rev. Methods Primers</i> <b>2021,</b> <i>1,</i> 27. <a href="https://doi.org/10.1038/s43586-021-00024-3">DOI: 10.1038/s43586-021-00024-3</a>.</li>
+                        <li>Kupče, Ē.; Mote, K. R.; Webb, A. G.; Madhu, P. K.; Claridge, T. D. W.<i> Prog. Nucl. Magn. Reson. Spectrosc.</i> <b>2021,</b> <i>124–125,</i> 1–56. <a href="https://doi.org/10.1016/j.pnmrs.2021.03.001">DOI: 10.1016/j.pnmrs.2021.03.001</a>.</li>
                     </ol>
 
                     <p>Apart from these, there are a few other papers covering more technical details of individual modules and supersequences:
