--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@
 
                     <p>and there are a couple of reviews which cover the NOAH technique:</p>
                     <ol class="citation">
-                        <li>Kupče, Ē.; Frydman, L.; Webb, A.; Yong, J. R. J.; Claridge, T. D. W.<i> Nat. Rev. Methods Primers</i> <b>2021,</b> <i>1,</i> 27. <a href="https://doi.org/10.1038/s43586-021-00024-3">DOI: 10.1038/s43586-021-00024-3</a>.</li>
-                        <li>Kupče, Ē.; Mote, K. R.; Webb, A. G.; Madhu, P. K.; Claridge, T. D. W.<i> Prog. Nucl. Magn. Reson. Spectrosc.</i> <b>2021,</b> <i>124–125,</i> 1–56. <a href="https://doi.org/10.1016/j.pnmrs.2021.03.001">DOI: 10.1016/j.pnmrs.2021.03.001</a>.</li>
+                        <li>Kupče, Ē.; Frydman, L.; Webb, A.; Yong, J. R. J.; Claridge, T. D. W. Parallel nuclear magnetic resonance spectroscopy.<i> Nat. Rev. Methods Primers</i> <b>2021,</b> <i>1,</i> 27. <a href="https://doi.org/10.1038/s43586-021-00024-3">DOI: 10.1038/s43586-021-00024-3</a>.</li>
+                        <li>Kupče, Ē.; Mote, K. R.; Webb, A. G.; Madhu, P. K.; Claridge, T. D. W. Multiplexing experiments in NMR and multi-nuclear MRI.<i> Prog. Nucl. Magn. Reson. Spectrosc.</i> <b>2021,</b> <i>124–125,</i> 1–56. <a href="https://doi.org/10.1016/j.pnmrs.2021.03.001">DOI: 10.1016/j.pnmrs.2021.03.001</a>.</li>
                     </ol>
 
                     <p>Apart from these, there are a few other papers covering more technical details of individual modules and supersequences:
@@ -511,6 +511,7 @@
                         <li>Kupče, Ē.; Claridge, T. D. W. Molecular structure from a single NMR supersequence. <i>Chem. Commun.</i> <b>2018,</b> <i>54</i> (52), 7139–7142. <a href="https://doi.org/10.1039/C8CC03296C">DOI: 10.1039/C8CC03296C</a>.</li>
                         <li>Claridge, T. D. W.; Mayzel, M.; Kupče, Ē. Triplet NOAH supersequences optimised for small molecule structure characterisation. <i>Magn. Reson. Chem.</i> <b>2019,</b> <i>57</i> (11), 946–952. <a href="https://doi.org/10.1002/mrc.4887">DOI: 10.1002/mrc.4887</a>.</li>
                         <li>Kupče, Ē.; Claridge, T. D. W. New NOAH modules for structure elucidation at natural isotopic abundance. <i>J. Magn. Reson.</i> <b>2019,</b> <i>307,</i> 106568. <a href="https://doi.org/10.1016/j.jmr.2019.106568">DOI: 10.1016/j.jmr.2019.106568</a>.</li>
+                        <li>Hansen, A. L.; Kupče, Ē.; Li, D.-W.; Bruschweiler-Li, L.; Wang, C.; Brüschweiler, R. 2D NMR-Based Metabolomics with HSQC/TOCSY NOAH Supersequences. <i>Anal. Chem.</i> <b>2021.</b> <a href="https://doi.org/10.1021/acs.analchem.0c05205">DOI: 10.1021/acs.analchem.0c05205</a>.</li>
                     </ol>
                 </dd>
                 
