website: fix incorrect devmode label

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                             <label for="C_HSQC_COSY_CLIP">C_HSQC_COSY_CLIP</label>
                         </li>
                         <li>
-                            <input type="radio" name="ci13" id="C_HSQC_COSY_DSE"></input>
+                            <input type="radio" name="c13" id="C_HSQC_COSY_DSE"></input>
                             <label for="C_HSQC_COSY_DSE">C_HSQC_COSY_DSE</label>
                         </li>
                         <li>
