website: update FAQ about acquisition flags

--- a/index.html
+++ b/index.html
@@ -405,13 +405,15 @@
                 <dt id="faq_zgoptns">What are acquisition flags, and how do I use them?</dt>
                 <span class="small"><a href="#top">Back to top of page</a> | <a href="#faq_h2">Back to FAQ</a></span>
                 <dd>
-                    <p>Acquisition flags are ways of conditionally running parts of a pulse programme (technically, compiling, not running). They are useful when we don't want to create two versions of what's essentially the same module with just small changes. In this case, you can enable acquisition flags to turn on/off optional features. The available acquisition flags are listed near the top of the pulse programme. To turn on an acquisition flag, such as <span class="ms">-DEDIT</span>, simply include it in the TopSpin acquisition parameter <b>zgoptns</b> (accessible via <span class="ms">ased</span>).</p>
-                    <p>There are two acquisition flags available currently:</p>
+                    <p>Acquisition flags are ways of conditionally running (technically, compiling) parts of a pulse programme. They are useful when we don't want to create two versions of what's essentially the same module with just small changes. In this case, you can enable acquisition flags to turn on/off optional features. The available acquisition flags are listed near the top of the pulse programme. To turn on an acquisition flag, such as <span class="ms">-DEDIT</span>, simply include it in the TopSpin acquisition parameter <b>zgoptns</b> (accessible via <span class="ms">ased</span>).</p>
+                    <p>There are currently a handful of acquisition flags:</p>
                     <ul>
-                        <li><b>-DEDIT</b>: enables multiplicity editing in HSQC spectra.</li>
+                        <li><b>-DEDIT</b> and <b>-DEDIT1</b>: enables multiplicity editing in HSQC or HSQC-COSY spectra.</li>
                         <li><b>-DTEDIT</b>: enables multiplicity editing in HSQC-TOCSY spectra.</li>
+                        <li><b>-DINVERT</b> and <b>-DINVERT1</b>: in HSQC-TOCSY spectra, causes 'direct' (HSQC) and 'indirect' (HSQC-TOCSY) responses to have opposite signs.
                     </ul>
-                    <p>There is also the -DNUS flag, which (partially) turns on non-uniform sampling, but you probably don't want to set that manually unless you're absolutely certain what you're doing. Instead, please use the <span class="ms">noah_nus.py</span> script. See: <a href="#faq_nus">Can non-uniform sampling be used with NOAH sequences?</a> for more information.</p>
+                    <p>To see whether you need the flags with '1' in them, please check the header of the pulse programme. Usually, the flags ending in '1' are applied to the first of two <sup>13</sup>C modules in a supersequence; if you only have one <sup>13</sup>C module, it's unlikely you will ever need the '1'-suffixed flags.</p>
+                    <p>There is also the -DNUS flag, which (partially) turns on non-uniform sampling, but you should not set that manually unless you're absolutely certain what you're doing. Instead, please use the <span class="ms">noah_nus.py</span> script. See: <a href="#faq_nus">Can non-uniform sampling be used with NOAH sequences?</a> for more information.</p>
                 </dd>
 
                 <dt id="faq_rga">Does rga work as expected?</dt>
