website, README: update acronym

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             </dl>
         </div><!-- /faq -->
 
-        <span class="small">&copy; Jonathan Yong, 2020–2021. Source code is available on <a href="https://github.com/yongrenjie/gennoah">GitHub</a>. Current version: v<span id="version"></span></span>
+        <span class="small">&copy; Jonathan Yong, 2020–2021. Source code is available on <a href="https://github.com/yongrenjie/genesis">GitHub</a>. Current version: v<span id="version"></span></span>
     </div><!-- /main-wrapper -->
 
 
