website: tweak title, heading sizes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
 
-    <title>NOAH pulse programme generator</title>
+    <title>GENESIS: NOAH pulse programmes</title>
 </head>
 
 <body id="top">
@@ -29,7 +29,7 @@
 
     <div id="main-wrapper">
 
-        <h1>NOAH pulse programme generator</h1>
+        <h1>GENESIS: a NOAH pulse programme generator</h1>
 
         <h2 id="modules_h2">Module selector</h2>
 
