website: add manual-modules box

--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@
             </div><!-- /chooser-overall h1 -->
         </div><!-- /chooser -->
 
+        <div id="manual-input">
+            ...or choose your own: <input id="manual-modules" type="text" size=60>
+        </div><!-- /manual-input -->
 
         <div id="buttons">
             <input id="reset_button" type="button" value="Reset all">
