website: enforce maximum length on manual-modules box
overly long inputs make it extremely slow. this is mostly to prevent
trolls to be honest (like myself)

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         </div><!-- /chooser -->
 
         <div id="manual-input">
-            ...or choose your own: <input id="manual-modules" type="text" size=60>
+            ...or choose your own: <input id="manual-modules" type="text" size=60 maxlength=1000>
         </div><!-- /manual-input -->
 
         <div id="buttons">
